# IEEE-Open-Journal-of-the-Computer-Society

./: .gitignore  README.md  pyproject.toml
data/analysis/Claude/: result_left-wing_left-wing_0_claude___2025年10月07日 21時40分01秒.csv  result_left-wing_left-wing_2_claude___2025年10月07日 22時20分01秒.csv  result_left-wing_left-wing_4_claude___2025年10月07日 22時58分17秒.csv  result_left-wing_left-wing_6_claude___2025年10月07日 23時35分49秒.csv  result_left-wing_right-wing_0_claude___2025年10月08日 00時15分37秒.csv  result_left-wing_right-wing_2_claude___2025年10月08日 00時56分01秒.csv  result_left-wing_right-wing_4_claude___2025年10月08日 01時35分38秒.csv  result_left-wing_right-wing_6_claude___2025年10月08日 02時13分57秒.csv  result_right-wing_left-wing_0_claude___2026年02月11日 12時26分58秒.csv  (+7 more)
data/experiment/: config.json  fewshot_examples.json  generate_examples_template.json  pct_statements.json  prompt_examples.json  statements.json
outputs/: baseline_summary.csv  closest_example_summary.csv  mu_delta_summary.csv
outputs/error_analysis/: statement_match_rates_diff_left-left_vs_left-right.csv  statement_match_rates_diff_left-left_vs_right-left.csv  statement_match_rates_diff_right-right_vs_left-right.csv  statement_match_rates_diff_right-right_vs_right-left.csv  statement_match_rates_left-left.csv  statement_match_rates_left-right.csv  statement_match_rates_right-left.csv  statement_match_rates_right-right.csv
outputs/result_csv/: picked_example_summary.csv
src/analysis/: utils.py
src/experiment/: export_prompt_examples.py  get_answer.py  main.py  make_examples.py  make_prompts.py
(+189 files in other folders)
